<resources>
  <string name="app_name">Stock Hawk</string>

  <string name="action_example">Example action</string>

  <string name="action_settings">Settings</string>
  <string name="action_change_units">Change Units</string>
  <string name="symbol_search">Symbol Search</string>
  <string name="content_test">Search for a Stock Symbol</string>
  <string name="input_hint">FB</string>
  <string name="input_prefill"></string>
  <string name="network_toast">Uh-oh! This app requires an internet connection</string>
  <string name="stock_saved_toast">This stock is already saved</string>

  <string name="seven_day" translatable="false">7day</string>
  <string name="seven_day_hint" translatable="false">7</string>
  <string name="one_month" translatable="false">1MO</string>
  <string name="one_month_hint" translatable="false">30</string>
  <string name="three_months" translatable="false">3MO</string>
  <string name="three_months_hint" translatable="false">90</string>
  <string name="six_months" translatable="false">6MO</string>
  <string name="six_months_hint" translatable="false">180</string>
  <string name="one_year" translatable="false">1YR</string>
  <string name="one_year_hint" translatable="false">365</string>

  <string name="frag_symbol_label">StockHistory</string>
  <string name="frag_bid_label">Current Bid:</string>
  <string name="frag_open_label">Open:</string>
  <string name="frag_close_label">Close:</string>
  <string name="frag_high_label">High:</string>
  <string name="frag_low_label">Low:</string>

  <string name="cd_7">seven day stock history</string>
  <string name="cd_30">thirty day stock history</string>
  <string name="cd_90">three month stock history</string>
  <string name="cd_180">half year stock history</string>
  <string name="cd_365">one year stock history</string>
  <string name="cd_fab">add stock to list</string>


  <string name="pref_chart_history_title">Chart History</string>
  <string name="pref_chartHistoryLength">Chart History Length</string>
  <string name="pref_chartHistoryLength_default" translatable="false">90</string>
  <string-array name="pref_chartHistoryLength_values">
    <item name="pref_one_week">7</item>
    <item name="pref_thirty_days">30</item>
    <item name="pref_ninety_days">90</item>
    <item name="pref_six_months">180</item>
    <item name="pref_one_year">365</item>
  </string-array>
  <string-array name="pref_chartHistoryLength_entries">
    <item name="pref_one_week">1 week</item>
    <item name="pref_thirty_days">30 days</item>
    <item name="pref_ninety_days">3 months</item>
    <item name="pref_six_months">6 months</item>
    <item name="pref_one_year">1 year</item>
  </string-array>
</resources>
