<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/stockhawk_std_margin"
        android:layout_marginRight="@dimen/stockhawk_std_margin"
        android:padding="@dimen/stockhawk_list_padding"
        android:textSize="@dimen/stockhawk_list_textSize"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/stockhawk_frag_padding"
        android:layout_marginStart="@dimen/stockhawk_frag_padding">

        <TextView
        android:id="@+id/open_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/yellow"
        android:textSize="@dimen/stockhawk_list_labeltextSize"
        android:text="@string/frag_open_label"/>

        <TextView
            android:id="@+id/open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/open_label"
            android:layout_marginLeft="@dimen/stockhawk_list_marginLeft"
            android:layout_marginStart="@dimen/stockhawk_list_marginLeft"
            android:padding="@dimen/stockhawk_list_padding"
            android:textSize="@dimen/stockhawk_list_textSize"
            />

        <TextView
            android:id="@+id/close_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/open_label"
            android:textColor="@color/cyan"
            android:textSize="@dimen/stockhawk_list_labeltextSize"
            android:text="@string/frag_close_label"/>

        <TextView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/close_label"
            android:layout_marginLeft="@dimen/stockhawk_list_marginLeft"
            android:layout_marginStart="@dimen/stockhawk_list_marginLeft"
            android:padding="@dimen/stockhawk_list_padding"
            android:textSize="@dimen/stockhawk_list_textSize"
            />

        <TextView
            android:id="@+id/high_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/open_label"
            android:layout_marginLeft="@dimen/stockhawk_list_marginLeftB"
            android:layout_marginStart="@dimen/stockhawk_list_marginLeftB"
            android:textColor="@color/green"
            android:textSize="@dimen/stockhawk_list_labeltextSize"
            android:text="@string/frag_high_label"/>
        <TextView
            android:id="@+id/high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/open_label"
            android:layout_marginLeft="@dimen/stockhawk_list_marginLeftC"
            android:layout_marginStart="@dimen/stockhawk_list_marginLeftC"
            android:padding="@dimen/stockhawk_list_padding"
            android:textSize="@dimen/stockhawk_list_textSize"
            />

        <TextView
            android:id="@+id/low_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/close_label"
            android:layout_marginLeft="@dimen/stockhawk_list_marginLeftB"
            android:layout_marginStart="@dimen/stockhawk_list_marginLeftB"
            android:textColor="@color/red"
            android:textSize="@dimen/stockhawk_list_labeltextSize"
            android:text="@string/frag_low_label"/>

        <TextView
            android:id="@+id/low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/close_label"
            android:layout_marginLeft="@dimen/stockhawk_list_marginLeftC"
            android:layout_marginStart="@dimen/stockhawk_list_marginLeftC"
            android:padding="@dimen/stockhawk_list_padding"
            android:textSize="@dimen/stockhawk_list_textSize"
            />

    </RelativeLayout>


</LinearLayout>